Fix Net→Gross UI update in new transaction editor for VAT transactions

Previously, when entering an amount in Net mode or switching categories,
the  new transaction editor did not update the displayed gross amount
in the credit/debit field. This was because updateVAT() recalculated
the splits in the backend (asset/liability, category, tax), but the
editor's creditDebitEdit widget was never updated with the new
gross value.

BUG: 514180
FIXED-IN: 5.2.2
(cherry picked from commit bfe0d32b426eb395d3432f13cfd369345d99973c)