kmymoney/views/newtransactioneditor.cpp
@@ -146,6 +146,7 @@ public:
     MyMoneySplit prepareSplit(const MyMoneySplit& sp);
     bool needClearSplitAction(const QString& action) const;
     void updateMemoLink();
+    void syncAmountFromTransaction(const MyMoneyTransaction& t);
 
     NewTransactionEditor* q;
     Ui_NewTransactionEditor* ui;
@@ -440,6 +441,7 @@ bool NewTransactionEditor::Private::categoryChanged(const QString& accountId)
                 splitModel.setData(index, QVariant::fromValue<MyMoneyMoney>(-ui->creditDebitEdit->shares()), eMyMoney::Model::SplitSharesRole);
 
                 updateVAT(ValueUnchanged);
+                syncAmountFromTransaction(q->transaction());
 
                 keepCategoryAmount = false;
 
@@ -498,6 +500,7 @@ bool NewTransactionEditor::Private::amountChanged()
         /// of all splits, otherwise we could ask if the user wants to start the split editor or anything else.
     }
     updateVAT(ValueChanged);
+    syncAmountFromTransaction(q->transaction());
     checkForValidAmount();
     return rc;
 }
@@ -1129,6 +1132,23 @@ void NewTransactionEditor::Private::updateMemoLink()
     } catch (MyMoneyException&) {
         ui->linkLabel->setText("");
     }
+}
+
+void NewTransactionEditor::Private::syncAmountFromTransaction(const MyMoneyTransaction& t)
+{
+    if (t.splits().isEmpty())
+        return;
+
+    const auto categoryId = ui->categoryCombo->getSelected();
+    if (categoryId.isEmpty())
+        return;
+
+    const auto category = MyMoneyFile::instance()->account(categoryId);
+    if (category.value("VatAmount").toLower() != QLatin1String("net"))
+        return;
+
+    ui->creditDebitEdit->setValue(t.splits().at(0).value(), true);
+    ui->creditDebitEdit->setShares(t.splits().at(0).shares());
 }
 
 NewTransactionEditor::NewTransactionEditor(QWidget* parent, const QString& accountId)
